import "column.proto";
import "control.proto";
import "query.proto";

option java_package = "edu.washington.escience.myriad.proto";
option java_outer_classname = "TransportProto";

message TransportMessage {
  enum TransportMessageType {
    DATA	= 0;
    QUERY	= 1;
    CONTROL = 2;
  }
  
  required TransportMessageType type = 1;
  optional DataMessage data = 2;
  optional Query query = 4;
  optional ControlMessage control = 5;
}

